fixing case sensitivity for dark mode image

--- a/landingPage.css
+++ b/landingPage.css
@@ -282,7 +282,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 /* background image */
 .bgimg-dark {
-  background-image: url('/images/DSC_0922.jpg');
+  background-image: url('/images/DSC_0922.JPG');
   min-height: 100%;
   background-position: center;
   background-size: cover;
